--- a/public/styles.css
+++ b/public/styles.css
@@ -1,107 +1,112 @@
-*{
-    margin: 0%;
-    padding: 0%;
-}
-body{
-    background-color: rgb(193, 216, 205);
-    display: flex;
-    flex-direction: column;
-}
+@media (max-width: 600px) { /*screen width of 600px or smaller */
+    *{
+        margin: 0%;
+        padding: 0%;
+    }
+    body{
+        background-color: rgb(193, 216, 205);
+        display: flex;
+        flex-direction: column;
+    }
+    .motto{margin-top: 30px; 
+        margin-left: 20%; 
+        margin-right: 20%; 
+        font-family:Georgia, 'Times New Roman', Times, serif; 
+        text-align: center; 
+        color:rgb(7, 7, 10); 
+        color: rgb(31, 31, 73);
+        font-size: 8px;
+    }
+    .desc{
+        background-color: rgb(183, 241, 222);
+        border-radius: 30px;
+        width: fit-content;
+        margin-right: 0%;
+        margin-left:5%;
+        padding: 5px;
+        height: fit-content;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        font-size: 12px;
+        margin-top:15px; 
+        text-align: center; 
+    }
+    .buttons {
+        display: flex;
+        gap: 30px;
+        align-items: center;
+        width: fit-content; 
+        position: absolute;
+        top: 50%; 
+        left: 50%;
+        transform: translate(-50%, -50%); 
+        margin-top: 15px;
+    }
+    
+    #view{
+        margin-top: 0px; 
+        background-color: rgb(31, 31, 73); 
+        border-radius: 30px; 
+        width: 200px; 
+        height: 30px; 
+        text-align: center; 
+        font-size: 16px; 
+        color: white;
+    }
+    #openCart{
+        margin-top: 0px; 
+        background-color: rgb(31, 31, 73); 
+        border-radius: 30px;
+        width: 150px; 
+        height: 30px; 
+        text-align: center; 
+        font-size: 16px; 
+        color: white;
+    }
 
-.myParagraph{
-    color: black;
-    height: 100px;
-    width: 200px;
-    /* background-color: aqua; */
-    margin-top: 20px;
-    display: flex;
-    justify-content: space-around;
-    border-radius: 30px;
-}
-.items{
-    /* margin-top: 30px;
-    font-size: 20px;
-    margin-left: 50%;
-    margin-right:50% ;
-    height: 30px; */
-}
-.form-container{
-    height: 600px;
-    width: 600px;
-    background-color: chocolate;
-    display: flex;
-    flex-direction: column;
-}
+    #items-list {
+        display: grid;
+        gap: 10px;
+        margin-top: 100px;
+        align-items: center;
+        width: 90%;
+        padding: 10px;
+        grid-template-columns: repeat(2, 1fr); /* Two equal-width columns */
+        justify-items: center; /* Horizontally centers items */
+        align-items: center; /* Vertically centers items */
 
- .selected-item{
-    background-color: aliceblue;
-    width: 300px;
-    height: 90px;
-    border-radius: 30px;
-    margin-top: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
- }
-.form-fields{
-    margin-top: 20px;
-    margin-left: 30%;
-    margin-right: 20%;
-}
-.form{
-    display: none; /* Hidden by default */
-    display: flex;
-    align-content: center;
-    flex-direction: column;
-}
-.item {
-    padding: 15px;
-    border-radius: 8px;
-    transition: transform 0.2s;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: rgb(183, 241, 222);
-    width: 150px;
-}
-#items-list{
-    background-color: rgb(193, 216, 205);
-    border-radius: 30px;
-    height: 160px;
-    width: 90%;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 30px;
-    margin-left: 5%;
-    /* margin-right: 5%; */
-}
-.top{
-    margin-top: 20px;
-    display: flex;
-    justify-content: space-between;
-    margin-right: 30px;
-    margin-left: 10PX;
-    color: blue;
-}
-.desc{
-    background-color: rgb(183, 241, 222);
-    border-radius: 30px;
-    width: 90%;
-    margin-right: 0%;
-    margin-left:5%;
-    height: 160px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-.buttons{
-    display: flex;
-    justify-content: space-between;
-    /* background-color: brown; */
-    width: 30%;
-    margin-left: 30%;
-    margin-right: 50%;
-    margin-top: 30px;
+        /* flex-direction: column;
+        column-count: 2;
+        column-gap: 20px;
+        max-height: auto;
+        justify-content: center; 
+        padding: 10px; 
+        background-color: rgb(193, 216, 205);
+        border-radius: 30px;
+        display: flex;
+        justify-content: space-between;
+        margin-left: 5%; */
+    }
+
+    .item {
+        padding: 15px;
+        border-radius: 8px;
+        transition: transform 0.2s;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        background-color: rgb(183, 241, 222);
+        width:170px;
+        height: 90px;
+    }
+
+    .cartBtn{
+        background-color: rgb(31, 31, 73);
+        color: #ccc;
+        border-radius: 20px;
+        font-size: 15px;
+    }
 }
 /* Modal styles */
 .modal {
@@ -121,33 +126,181 @@ body{
     background-color: rgb(217, 223, 221);
     border-radius: 20px;
 }
-#cartItems{
-    display: flex;
-    flex-direction: column;
-}
-#userForm{
-    margin-top: 5px;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
 
-.modal-content {
-    position: relative;
-}
 
-.close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
-    font-size: 20px;
-}
+@media (min-width: 600px) { /*screen width of 600px or smaller */
+    *{
+        margin: 0%;
+        padding: 0%;
+    }
+    body{
+        background-color: rgb(193, 216, 205);
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .myParagraph{
+        color: black;
+        max-height: 100px;
+        max-width: 200px;
+        background-color: aqua;
+        margin-top: 20px;
+        display: flex;
+        justify-content: space-around;
+        border-radius: 30px;
+    }
+    
+    .form-container{
+        height: 600px;
+        width: 600px;
+        background-color: chocolate;
+        display: flex;
+        flex-direction: column;
+    }
+    
+     .selected-item{
+        background-color: aliceblue;
+        width: 300px;
+        height: 90px;
+        border-radius: 30px;
+        margin-top: 30px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+     }
+    .form-fields{
+        margin-top: 20px;
+        margin-left: 30%;
+        margin-right: 20%;
+    }
+    .form{
+        display: none; /* Hidden by default */
+        display: flex;
+        align-content: center;
+        flex-direction: column;
+    }
+    .item {
+        padding: 15px;
+        border-radius: 8px;
+        transition: transform 0.2s;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        background-color: rgb(183, 241, 222);
+        width: 150px;
+    }
+    #items-list{
+        background-color: rgb(193, 216, 205);
+        border-radius: 30px;
+        height: 160px;
+        width: 90%;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 30px;
+        margin-left: 5%;
+        /* margin-right: 5%; */
+    }
+    .top{
+        margin-top: 20px;
+        display: flex;
+        justify-content: space-between;
+        margin-right: 30px;
+        margin-left: 10PX;
+        color: blue;
+    }
+    .desc{
+        background-color: rgb(183, 241, 222);
+        border-radius: 30px;
+        width: 90%;
+        margin-right: 0%;
+        margin-left:5%;
+        height: 160px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .buttons{
+        display: flex;
+        justify-content: space-between;
+        width: 30%;
+        margin-left: 30%;
+        margin-right: 50%;
+        margin-top: 30px;
+    }
 
-.cartBtn{
-    background-color: rgb(31, 31, 73);
-    color: #ccc;
-    border-radius: 20px;
-    font-size: 15px;
+    #view{
+        margin-top: 0px; 
+        background-color: rgb(31, 31, 73); 
+        border-radius: 30px; 
+        min-width: 100px; 
+        min-height: 30px; 
+        text-align: center; 
+        font-size: 16px; 
+        color: white;
+    }
+    #openCart{
+        margin-top: 0px; 
+        background-color: rgb(31, 31, 73); 
+        border-radius: 30px;
+        width: 100px; 
+        height: 30px; 
+        text-align: center; 
+        font-size: 16px; 
+        color: white;
+    }
+    /* Modal styles */
+    .modal {
+        display: none;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 400px;
+        height: fit-content;
+        justify-content: space-between;
+        background-color: white;
+        border: 1px solid #ccc;
+        padding: 20px;
+        z-index: 1000;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+        background-color: rgb(217, 223, 221);
+        border-radius: 20px;
+    }
+    #cartItems{
+        display: flex;
+        flex-direction: column;
+    }
+    #userForm{
+        margin-top: 5px;
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+    
+    .modal-content {
+        position: relative;
+    }
+    
+    .close {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        cursor: pointer;
+        font-size: 20px;
+    }
+    
+    .cartBtn{
+        background-color: rgb(31, 31, 73);
+        color: #ccc;
+        border-radius: 20px;
+        font-size: 15px;
+    }
+    .motto{margin-top: 30px; 
+        margin-left: 20%; 
+        margin-right: 20%; 
+        font-family:Georgia, 'Times New Roman', Times, serif; 
+        text-align: center; 
+        color:rgb(7, 7, 10); 
+        color: rgb(31, 31, 73);}
 }
