--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,119 @@
-@media (max-width: 600px) { /*screen width of 600px or smaller */
+@media (max-width: 430px) { /*screen width of 600px or smaller */
+    *{
+        margin: 0%;
+        padding: 0%;
+    }
+    body{
+        background-color: rgb(193, 216, 205);
+        display: flex;
+        flex-direction: column;
+    }
+    .motto{margin-top: 30px; 
+        margin-left: 20%; 
+        margin-right: 20%; 
+        font-family:Georgia, 'Times New Roman', Times, serif; 
+        text-align: center; 
+        color:rgb(7, 7, 10); 
+        color: rgb(31, 31, 73);
+        font-size: 8px;
+    }
+    .desc{
+        background-color: rgb(183, 241, 222);
+        border-radius: 30px;
+        width: fit-content;
+        margin-right: 0%;
+        margin-left:5%;
+        padding: 5px;
+        height: fit-content;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        font-size: 12px;
+        margin-top:15px; 
+        text-align: center; 
+    }
+    .buttons {
+    height: fit-content;
+    width: fit-content;
+    display: flex;
+    flex-direction: column; 
+    gap: 20px; 
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+    margin-top: 50px;
+       
+    }
+    
+    #view{
+        margin-top: 0px; 
+        background-color: rgb(31, 31, 73); 
+        border-radius: 30px; 
+        text-align: center; 
+        font-size: 16px; 
+        color: white;
+        /* width: 50%; */
+    }
+    #openCart{
+        margin-top: 0px; 
+        background-color: rgb(31, 31, 73); 
+        border-radius: 30px;
+        text-align: center; 
+        font-size: 16px; 
+        color: white;
+    }
+
+    .item {
+        padding: 15px;
+        border-radius: 8px;
+        transition: transform 0.2s;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        background-color: rgb(183, 241, 222);
+        width:190px;
+        height: 110px;
+    }
+
+    .cartBtn{
+        background-color: rgb(31, 31, 73);
+        color: #ccc;
+        border-radius: 20px;
+        font-size: 15px;
+    }
+    #items-list {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        margin-top: 100px;
+        align-items: center;
+        width: 90%;
+        padding: 10px;
+        grid-template-columns: repeat(2, 1fr); 
+        justify-items: center; 
+        align-items: center; 
+    }
+}
+/* Modal styles */
+.modal {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    height: fit-content;
+    justify-content: space-between;
+    background-color: white;
+    border: 1px solid #ccc;
+    padding: 20px;
+    z-index: 1000;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    background-color: rgb(217, 223, 221);
+    border-radius: 20px;
+}
+
+@media (min-width: 430px) { /*screen width of 600px or smaller */
     *{
         margin: 0%;
         padding: 0%;
@@ -38,10 +153,10 @@
         align-items: center;
         width: fit-content; 
         position: absolute;
-        top: 50%; 
+        /* top: 50%;  */
         left: 50%;
         transform: translate(-50%, -50%); 
-        margin-top: 15px;
+        margin-top: 30px;
     }
     
     #view{
@@ -68,25 +183,13 @@
     #items-list {
         display: grid;
         gap: 10px;
-        margin-top: 100px;
+        margin-top: 50px;
         align-items: center;
         width: 90%;
         padding: 10px;
-        grid-template-columns: repeat(2, 1fr); /* Two equal-width columns */
-        justify-items: center; /* Horizontally centers items */
-        align-items: center; /* Vertically centers items */
-
-        /* flex-direction: column;
-        column-count: 2;
-        column-gap: 20px;
-        max-height: auto;
-        justify-content: center; 
-        padding: 10px; 
-        background-color: rgb(193, 216, 205);
-        border-radius: 30px;
-        display: flex;
-        justify-content: space-between;
-        margin-left: 5%; */
+        grid-template-columns: repeat(2, 1fr); 
+        justify-items: center; 
+        align-items: center; 
     }
 
     .item {
@@ -128,7 +231,7 @@
 }
 
 
-@media (min-width: 600px) { /*screen width of 600px or smaller */
+@media (min-width: 900px) { /*screen width of 600px or smaller */
     *{
         margin: 0%;
         padding: 0%;
@@ -218,22 +321,24 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        font-size: 20px;
     }
     .buttons{
         display: flex;
         justify-content: space-between;
         width: 30%;
-        margin-left: 30%;
+        margin-left: 0%;
         margin-right: 50%;
         margin-top: 30px;
+        /* background-color: blueviolet; */
     }
 
     #view{
         margin-top: 0px; 
         background-color: rgb(31, 31, 73); 
         border-radius: 30px; 
-        min-width: 100px; 
-        min-height: 30px; 
+        max-width: 100px; 
+        max-height: 30px; 
         text-align: center; 
         font-size: 16px; 
         color: white;
@@ -242,8 +347,8 @@
         margin-top: 0px; 
         background-color: rgb(31, 31, 73); 
         border-radius: 30px;
-        width: 100px; 
-        height: 30px; 
+        max-width: 100px; 
+        max-height: 30px; 
         text-align: center; 
         font-size: 16px; 
         color: white;
