--- a/public/styles.css
+++ b/public/styles.css
@@ -62,6 +62,14 @@
         font-size: 16px; 
         color: white;
     }
+    #submit{
+        margin-top: 0px; 
+        background-color: rgb(31, 31, 73); 
+        border-radius: 30px;
+        text-align: center; 
+        font-size: 16px; 
+        color: white;
+    }
 
     .item {
         padding: 15px;
@@ -170,6 +178,16 @@
         color: white;
     }
     #openCart{
+        margin-top: 0px; 
+        background-color: rgb(31, 31, 73); 
+        border-radius: 30px;
+        width: 150px; 
+        height: 30px; 
+        text-align: center; 
+        font-size: 16px; 
+        color: white;
+    }
+    #submit{
         margin-top: 0px; 
         background-color: rgb(31, 31, 73); 
         border-radius: 30px;
@@ -353,7 +371,61 @@
         font-size: 16px; 
         color: white;
     }
+    #submit{
+        margin-top: 0px; 
+        background-color: rgb(31, 31, 73); 
+        border-radius: 10px;
+        max-width: 100px; 
+        max-height: 30px; 
+        text-align: center; 
+        font-size: 16px; 
+        color: white;
+    }
+    .closeForm{
+        margin-top: 0px; 
+        background-color: rgb(242, 242, 248); 
+        border-radius: 10px;
+        max-width: 100px; 
+        max-height: 30px; 
+        text-align: center; 
+        font-size: 16px; 
+        color: black;
+    }
+
+    .formBtn{
+        display: none;
+    }
+
+
+    /* orders page  */
+    .order-items{
+        background-color: bisque;
+    }
+
+
     /* Modal styles */
+    .formModal{
+        display: none;
+        position: relative;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 400px;
+        height: fit-content;
+        justify-content: space-between;
+        background-color: white;
+        border: 1px solid #ccc;
+        padding: 20px;
+        gap: 20px;
+        z-index: 1000;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+        background-color: rgb(217, 223, 221);
+        border-radius: 20px;
+    }
+
+    .form-content{
+        position: relative;
+    }
     .modal {
         display: none;
         position: fixed;
